Jdk11 : Jersey and Swagger